--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64"
   },
   "dependencies": {
+    "@fluentui/react": "^8.125.1",
+    "@fluentui/react-file-type-icons": "^8.15.1",
     "@tailwindcss/vite": "^4.1.17",
     "clipboardy": "^5.0.1",
     "daisyui": "^5.5.5",
@@ -24,7 +26,8 @@
     "os-utils": "^0.0.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.1.17"
+    "tailwindcss": "^4.1.17",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
