--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "os-utils": "^0.0.14",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.12"
   },
