--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "clipboardy": "^5.0.1",
     "daisyui": "^5.5.5",
+    "docx-preview": "^0.3.7",
     "fuse.js": "^7.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
