--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "npm-run-all --parallel dev:react dev:electron",
     "dev:react": "vite",
     "dev:electron": "npm run transpile:electron; cross-env NODE_ENV=development electron .",
-    "build": "tsc -b && vite build",
+    "build:react": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "transpile:electron": "tsc -p ./src/electron/tsconfig.json",
-    "dist:mac": "npm run transpile:electron && npm run build && electron-builder --mac --arm64"
+    "build": "npm run transpile:electron && npm run build:react && electron-builder --mac --arm64"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
