--- a/src/electron/tsconfig.json
+++ b/src/electron/tsconfig.json
@@ -3,10 +3,17 @@
     "strict": true,
     "target": "ESNext",
     "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "outDir": "../../dist-electron",
+    "rootDir": "..",
     "skipLibCheck": true,
     "types": [
       "../../types"
     ]
-  }
+  },
+  "include": [
+    "./**/*.ts",
+    "./**/*.cts",
+    "../common/**/*.ts"
+  ]
 }
