--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev:react": "vite",
     "dev:electron": "npm run transpile:electron; cross-env NODE_ENV=development electron .",
     "build:react": "tsc -b && vite build",
+    "check:frontend": "tsc -b",
     "lint": "eslint .",
     "preview": "vite preview",
     "transpile:electron": "tsc -p ./src/electron/tsconfig.json",
