--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
+    "@types/adm-zip": "^0.5.7",
     "@use-gesture/react": "^10.3.1",
     "@xstate/react": "^6.0.0",
     "@xstate/store": "^3.13.0",
+    "adm-zip": "^0.5.16",
     "clipboardy": "^5.0.1",
     "daisyui": "^5.5.5",
     "docx-preview": "^0.3.7",
