--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "transpile:electron": "tsc -p ./src/electron/tsconfig.json",
     "build": "npm run transpile:electron && npm run build:react && electron-builder --mac --arm64",
     "build-vendor": "node scripts/build-all.mjs",
-    "build-everything": "npm run build-vendor && npm run build"
+    "build-everything": "npm run build-vendor && npm run build",
+    "build-icon": "node scripts/build-icon.mjs"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
