--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@hookform/resolvers": "^5.2.2",
     "@tailwindcss/vite": "^4.1.17",
     "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^7.0.0",
+    "@types/unzipper": "^0.10.11",
     "@use-gesture/react": "^10.3.1",
     "@xstate/react": "^6.0.0",
     "@xstate/store": "^3.13.0",
     "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "clipboardy": "^5.0.1",
     "csv-parse": "^6.1.0",
     "daisyui": "^5.5.5",
@@ -44,6 +47,7 @@
     "react-use-measure": "^2.1.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
+    "unzipper": "^0.12.3",
     "xlsx": "^0.18.5",
     "xstate": "^5.25.0",
     "zod": "^4.1.12"
