--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "csv-parse": "^6.1.0",
     "daisyui": "^5.5.5",
     "docx-preview": "^0.3.7",
+    "extract-zip": "^2.0.1",
     "flexlayout-react": "^0.8.17",
     "fuse.js": "^7.1.0",
     "lodash": "^4.17.21",
