--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "extract-zip": "^2.0.1",
     "flexlayout-react": "^0.8.17",
     "fuse.js": "^7.1.0",
+    "jotai": "^2.16.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.554.0",
     "os-utils": "^0.0.14",
