--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/adm-zip": "^0.5.7",
     "@types/archiver": "^7.0.0",
     "@use-gesture/react": "^10.3.1",
+    "@welldone-software/why-did-you-render": "^10.0.1",
     "@xstate/react": "^6.0.0",
     "@xstate/store": "^3.13.0",
     "adm-zip": "^0.5.16",
