--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "build:react": "tsc -b && vite build",
     "check:frontend": "tsc -b",
     "check:backend": "tsc -p ./src/electron/tsconfig.json",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
     "test": "vitest",
     "test:electron": "vitest run src/electron src/common",
     "test:frontend": "vitest run src/ui",
@@ -43,9 +45,11 @@
     "@xstate/store": "^3.13.0",
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
+    "better-sqlite3": "^12.6.2",
     "clipboardy": "^5.0.1",
     "csv-parse": "^6.1.0",
     "docx-preview": "^0.3.7",
+    "drizzle-orm": "^0.44.1",
     "extract-zip": "^2.0.1",
     "flexlayout-react": "^0.8.17",
     "fuse.js": "^7.1.0",
@@ -68,6 +72,7 @@
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/lodash": "^4.17.20",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^24.10.1",
     "@types/os-utils": "^0.0.4",
     "@types/react": "^19.2.5",
@@ -76,6 +81,7 @@
     "@vitest/ui": "^3.2.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "cross-env": "^10.1.0",
+    "drizzle-kit": "^0.31.0",
     "electron": "^39.2.3",
     "electron-builder": "^26.0.12",
     "eslint": "^9.39.1",
